--- a/dark.user.css
+++ b/dark.user.css
@@ -1,10 +1,11 @@
 /* ==UserStyle==
 @name        wiki DARK
 @namespace   StylishThemes
-@version     1.0.4
+@version     1.0.5
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/dark.user.css
 @license     CC-BY-SA-4.0
+
 ==/UserStyle== */
 @-moz-document domain("wikipedia.org"), 
 domain("meta.wikimedia.org"), 
@@ -25,7 +26,9 @@ domain("wikiversity.org"),
 domain("wikiquote.org"), 
 domain("wikidata.org"), 
 domain("beta.wmflabs.org"), 
-domain("wikifunctions.org") { 
+domain("wikifunctions.org"), 
+domain("vrt-wiki.wikimedia.org"), 
+domain("patchdemo.wmflabs.org") {
 /* COPIED from https://en.wikipedia.org/wiki/MediaWiki:Gadget-dark-mode.css
     
 /* WikimediaUI Dark Mode
