--- a/new-vector-max-width.user.css
+++ b/new-vector-max-width.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 min/max-widths
 @namespace   StylishThemes
-@version     1.0.39
+@version     1.0.40
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-max-width.user.css
 @license     CC-BY-SA-4.0
@@ -26,7 +26,9 @@ domain("wikiversity.org"),
 domain("wikiquote.org"),
 domain("wikidata.org"),
 domain("beta.wmflabs.org"),
-domain("wikifunctions.org") {
+domain("wikifunctions.org"),
+domain("vrt-wiki.wikimedia.org"),
+domain("patchdemo.wmflabs.org") {
   /* NOTE: this assumes you are using Left-to-Right languages in NEW VECTOR ([[mw:Desktop Improvements]] beta) but also tries to work in Legacy Vector */
   
 /* Remove sticky header max-width */
