--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.82
+@version     1.0.83
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -260,18 +260,14 @@ domain("patchdemo.wmflabs.org") {
 } */
 
 /* Move button for ToC-collapsed down below the sticky-header, and add border */
-.vector-below-page-title #vector-toc-collapsed-button {
+.client-js .vector-below-page-title .vector-page-titlebar-toc {
   top: 55px;
   border: lightgray 1px solid;
 }
 /* Hide the word "Contents" in that case */
 @media screen and (max-width: 999px) {
-  .sidebar-toc-title {
-    visibility: hidden;
-  }
-  .vector-below-page-title .sidebar-toc {
-    top: 55px !important;
-    left: 1px
+  .sidebar-toc .vector-toc-pinnable-header {
+    display: none;
   }
 }
 
