fix padding for page-tools

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.84
+@version     1.0.85
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -309,7 +309,7 @@ domain("patchdemo.wmflabs.org") {
     max-width: min-content;
     top: 50px !important;
     left: auto;
-    padding: 0 !important;
+    padding:  0 10px 0 0 !important;
     height: 40px;
     transition: none;
     transform: translateY(0);
