--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.87
+@version     1.0.88
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -285,6 +285,10 @@ domain("patchdemo.wmflabs.org") {
 }
 .vector-toc-pinned #vector-toc-pinned-container {
   padding-top: 0;
+  margin-top: 0;
+}
+.vector-feature-page-tools-enabled.vector-feature-main-menu-pinned-disabled .vector-toc-pinned #vector-toc-pinned-container {
+  margin-top: 0;
 }
 
 /* CUSTOM PAGE TOOLS */
@@ -295,9 +299,9 @@ domain("patchdemo.wmflabs.org") {
 .mw-header {
   position: fixed; 
   background: white; 
-  width: 100%;
+  width: 98%;
   top: 0;
-  left: 0;
+  left: 12px;
   padding: 0;
 }
 /* Nudge content down to account for no-default gap */
