Reduce gap in sidebar lists

--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.0.88
+@version     1.0.89
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -208,6 +208,11 @@ domain("patchdemo.wmflabs.org") {
   display: none;
 }
 
+/* Reduce gap in sidebar list */
+.vector-feature-page-tools-enabled .vector-pinnable-element .mw-list-item a {
+  padding: 3px 8px;
+}
+
 /* ToC tweaks */
 /* Change "Beginning" to an Up-arrow */
 #toc-mw-content-text div {
@@ -249,7 +254,7 @@ domain("patchdemo.wmflabs.org") {
 .vector-pinnable-header-label {
   font-size: 12px !important;
 }
-  .vector-pinnable-header-toggle-button {
+.vector-pinnable-header-toggle-button {
   font-size: 11px !important;
 }
 /* Add border  --- TEST REMOVAL
